--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>Anuj Kumar</h1>
             <p>Software Developer | Passionate about creating user-friendly software experiences.</p>
             <p><strong>Location:</strong> Patna Bihar</p>
-            <p><strong>Email:</strong> <a href="mailto:anuj26777@gmail.com">anuj26777@gmail.com.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:anuj26777@gmail.com">anuj26777@gmail.com</a></p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/anuj-kumar-408a69216" target="_blank">linkedin.com/in/anujkumar</a></p>
             <p><strong>Github:</strong> <a href="https://github.com/anuj26777/Portfoliooo"> Github</a></p>
         </div>
