--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <div class="contact" id="contact">
         <h2>Contact</h2>
-        <p><strong>Email:</strong> <a href="mailto:anuj26777@.com">anuj26777@.com</a></p>
+        <p><strong>Email:</strong> <a href="mailto:anuj26777@gmail.com">anuj26777@gmail.com</a></p>
         <p><strong>Github:</strong> <a href="https://github.com/anuj26777/Portfoliooo"> Github</a></p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/anuj-kumar-408a69216r" target="_blank">linkedin.com/in/anujkumar</a></p>
     </div>
